force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Is_Commissionable__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Is_Commissionable__c</fullName>
    <formula>PricebookEntry.Product2.RecurSoft__Is_Commissionable__c</formula>
    <inlineHelpText>Product eligible for commission.</inlineHelpText>
    <label>Is Commissionable</label>
    <type>Checkbox</type>
</CustomField>