force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Is_Master__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Is_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to determine if this opportunity product should generate a Master subscription instead of a regular subscription.</description>
    <inlineHelpText>Determines if a Master subscription will be generated at closed-won.</inlineHelpText>
    <label>Is Master</label>
    <type>Checkbox</type>
</CustomField>