force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__isCreditLine__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__isCreditLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Credit Line</label>
    <type>Checkbox</type>
</CustomField>