force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Milestone_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Milestone_1_Amount__c</fullName>
    <inlineHelpText>First amount to be invoiced.</inlineHelpText>
    <label>Milestone 1 Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>