force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Milestone_1_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Milestone_1_Date__c</fullName>
    <inlineHelpText>Date of the first invoice.</inlineHelpText>
    <label>Milestone 1 Date</label>
    <type>Date</type>
</CustomField>