force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Milestone_2_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Milestone_2_Date__c</fullName>
    <inlineHelpText>Date of the second invoice.</inlineHelpText>
    <label>Milestone 2 Date</label>
    <type>Date</type>
</CustomField>