force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Milestone_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Milestone_3_Amount__c</fullName>
    <inlineHelpText>Third amount to be invoiced.</inlineHelpText>
    <label>Milestone 3 Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>