force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Milestone_3_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Milestone_3_Date__c</fullName>
    <inlineHelpText>Date of the third invoice.</inlineHelpText>
    <label>Milestone 3 Date</label>
    <type>Date</type>
</CustomField>