force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Number_Of_Revenue_Installments__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Number_Of_Revenue_Installments__c</fullName>
    <formula>PricebookEntry.Product2.RecurSoft__Number_of_Revenue_Installments__c</formula>
    <label>DeprecatedNumber Of Revenue Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>