force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Original_Contract_Term_Days__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Original_Contract_Term_Days__c</fullName>
    <label>Original Contract Term(Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>