force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Price_Based_On__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Price_Based_On__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.RecurSoft__Product_Based_On__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines the pricing based on each unit, vs tiered or bracketed pricing.</inlineHelpText>
    <label>Price Based On</label>
    <type>Text</type>
</CustomField>