force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Pro__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Pro__c</fullName>
    <formula>PricebookEntry.Product2.RecurSoft__Prorated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated</label>
    <type>Checkbox</type>
</CustomField>