force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Product_Subscription__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Product_Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This field contains product subscription for current opportunity product.</inlineHelpText>
    <label>Product Subscription</label>
    <referenceTo>RecurSoft__Product_Subscription__c</referenceTo>
    <relationshipLabel>Opportunity Product (Product Subscription)</relationshipLabel>
    <relationshipName>RecurSoft_Opportunity_Product3</relationshipName>
    <type>Lookup</type>
</CustomField>