force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Promo_Pricing__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Promo_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when you want to keep the MRR for this item out of the calculated Item MRR.</inlineHelpText>
    <label>Deprecated - Promo Pricing</label>
    <type>Checkbox</type>
</CustomField>