force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Purchase_Price_formula__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Purchase_Price_formula__c</fullName>
    <formula>PricebookEntry.Product2.RecurSoft__Purchase_Price__c</formula>
    <inlineHelpText>Price at which product being sold was initially purchased.</inlineHelpText>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>