force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Revenue_Recognition_End_Date_form__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Revenue_Recognition_End_Date_form__c</fullName>
    <formula>IF ( ISNULL(RecurSoft__Revenue_Recognition_Start_Date__c ), RecurSoft__Revenue_Recognition_Start_Date__c, 

IF 
(ISPICKVAL(PricebookEntry.Product2.RecurSoft__Rev_Rec_End_Based_On__c, &quot;Revenue Schedule Entry&quot;),  RecurSoft__Revenue_Recognition_Start_Date__c  +  PricebookEntry.Product2.RecurSoft__Number_of_Revenue_Installments__c, 
  IF
(ISPICKVAL(PricebookEntry.Product2.RecurSoft__Rev_Rec_End_Based_On__c, &quot;Contract Term End Date&quot;),  RecurSoft__Contract_Term_End_Date_Editable__c, NULL
  )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deprecated -Revenue Recognition End Date</label>
    <type>Date</type>
</CustomField>