force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Revenue_Recognition_Method__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Revenue_Recognition_Method__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.RecurSoft__Revenue_Recognition_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deprecated - Revenue Recognition Method</label>
    <type>Text</type>
</CustomField>