force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Revenue_Recognition_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Revenue_Recognition_Start_Date__c</fullName>
    <formula>IF(ISPICKVAL(PricebookEntry.Product2.RecurSoft__Billing_Frequency__c, &#39;One-Time&#39;),
     Opportunity.RecurSoft__Contract_Signed_Date__c,
     RecurSoft__Contract_Term_Start_Date_New__c +  PricebookEntry.Product2.RecurSoft__Rev_Rec_Start__c
)</formula>
    <label>DeprecatedRevenue Recognition Start Date</label>
    <type>Date</type>
</CustomField>