force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Sales_Price_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Sales_Price_Per_Month__c</fullName>
    <formula>IF(  ISPICKVAL(PricebookEntry.Product2.RecurSoft__Revenue_Schedule_Type__c, &quot;Divide Amount into multiple installments&quot;) &amp;&amp;
 AND(PricebookEntry.Product2.RecurSoft__Number_of_Revenue_Installments__c &lt;&gt; 0,  NOT(ISNULL(PricebookEntry.Product2.RecurSoft__Number_of_Revenue_Installments__c)) ) , 

UnitPrice / PricebookEntry.Product2.RecurSoft__Number_of_Revenue_Installments__c, 

 UnitPrice)</formula>
    <label>Sales Price Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>