force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Source_Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Source_Opportunity_Close_Date__c</fullName>
    <formula>Opportunity.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Opportunity Close Date</label>
    <type>Date</type>
</CustomField>