force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Source_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Source_Opportunity_Stage__c</fullName>
    <formula>TEXT(Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Opportunity Stage</label>
    <type>Text</type>
</CustomField>