force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Source_Subscription_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Source_Subscription_Billing_Date__c</fullName>
    <label>Source Subscription Billing Date</label>
    <type>Date</type>
</CustomField>