force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Subscription_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Subscription_Total_Price__c</fullName>
    <description>Total Price of the generated subscription after Closed Won</description>
    <label>Subscription Total Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>