force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Tier_1_Price__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Tier_1_Price__c</fullName>
    <inlineHelpText>Price of the first tier (subscription pricing)</inlineHelpText>
    <label>Price 1</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>