force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Tier_2_Qty__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Tier_2_Qty__c</fullName>
    <inlineHelpText>Quantity of the second tier (product subscription)</inlineHelpText>
    <label>Quantity 2</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>