force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Tier_3_Price__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Tier_3_Price__c</fullName>
    <inlineHelpText>Price of the third tier (subscription pricing)</inlineHelpText>
    <label>Price 3</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>