force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Usage_Quantity_2__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Usage_Quantity_2__c</fullName>
    <inlineHelpText>Quantity of the second tier (usage).</inlineHelpText>
    <label>Usage Quantity 2</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>