force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Usage_Quantity_3__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Usage_Quantity_3__c</fullName>
    <inlineHelpText>Quantity of the third tier (usage).</inlineHelpText>
    <label>Usage Quantity 3</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>