force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Usage_Rate_3__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Usage_Rate_3__c</fullName>
    <inlineHelpText>Price of the third tier (usage pricing).</inlineHelpText>
    <label>Usage Rate 3</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>