force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Usage_Type__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.RecurSoft__Usage_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines the pricing calculation of usage records.</inlineHelpText>
    <label>Usage Type</label>
    <type>Text</type>
</CustomField>