force-app/main/default/objects/OpportunityLineItem/fields/RecurSoft__Vendor__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Product (Vendor)</relationshipLabel>
    <relationshipName>RecurSoft_Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>