force-app/main/default/objects/OpportunityLineItem/fields/SR_Conversations_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>SR_Conversations_Phone_Number__c</fullName>
    <label>SR Conversations Phone Number</label>
    <type>Phone</type>
</CustomField>