force-app/main/default/objects/OpportunityLineItem/fields/SRSR_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>SRSR_Monthly_Revenue__c</fullName>
    <description>Total revenue from the SR Smart Reviews product family. Updated by WFR. This will rollup to the Opportunity, Sales Credits, and Sales Targets.</description>
    <label>SRSR Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>