force-app/main/default/objects/OpportunityLineItem/fields/Total_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Term__c</fullName>
    <formula>IF( ISPICKVAL( Free_Month_Setting__c , &quot;Extend Contract - At the Beginning&quot; ), 
Base_Contract_Term__c + Number_of_Free_Months__c , 
Base_Contract_Term__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>