force-app/main/default/objects/OpportunityLineItem/fields/Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date__c</fullName>
    <formula>IF( Is_Monthly__c ,
IF( TEXT( Trial__c ) = &quot;&quot; ,
 null ,
 RecurSoft__Contract_Term_Start_Date_New__c + VALUE( TEXT( Trial__c ))) ,
null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>