force-app/main/default/objects/OpportunityLineItem/validationRules/Block_SRC_NonUSA.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_SRC_NonUSA</fullName>
    <active>true</active>
    <description>Blocks the sale of Conversations for Canada customers.</description>
    <errorConditionFormula>ISPICKVAL( Product2.Family , &quot;SR Conversations&quot; ) &amp;&amp;
Opportunity.Account.BillingCountry != &quot;United States&quot; &amp;&amp; Opportunity.Account.BillingCountry != &quot;Canada&quot; &amp;&amp;
Opportunity.Account.BillingCountry != &quot;Puerto Rico&quot;</errorConditionFormula>
    <errorMessage>SR Conversations is not currently available outside the United States and Canada.</errorMessage>
</ValidationRule>