force-app/main/default/objects/OpportunityLineItem/validationRules/Contract_End_before_Contract_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_End_before_Contract_Start</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNULL( RecurSoft__Contract_Term_End_Date_Editable__c ) ) &amp;&amp; 
RecurSoft__Contract_Term_End_Date_Editable__c &lt;= RecurSoft__Contract_Term_Start_Date_New__c &amp;&amp;
 $Profile.Name != &#39;System Administrator&#39;</errorConditionFormula>
    <errorDisplayField>RecurSoft__Contract_Term_End_Date_Editable__c</errorDisplayField>
    <errorMessage>Contract Term End Date must be greater than Contract Term Start Date</errorMessage>
</ValidationRule>