force-app/main/default/objects/OpportunityLineItem/validationRules/Contract_Start_in_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Start_in_Past</fullName>
    <active>false</active>
    <errorConditionFormula>RecurSoft__Contract_Term_Start_Date_New__c &lt; Today() &amp;&amp;
 $Profile.Name != &quot;System Administrator&quot; &amp;&amp;
$Profile.Name != &quot;Finance&quot;</errorConditionFormula>
    <errorMessage>The Contract Term Start Date cannot be in the past</errorMessage>
</ValidationRule>