force-app/main/default/objects/OpportunityLineItem/validationRules/OppLine006_Free_Month_Setting.validationRule-meta.xml
<ValidationRule>
    <fullName>OppLine006_Free_Month_Setting</fullName>
    <active>true</active>
    <description>Ensure a Free Month Setting is chosen when Free Months are added.</description>
    <errorConditionFormula>Number_of_Free_Months__c &gt; 0 &amp;&amp;
(ISBLANK( TEXT( Free_Month_Setting__c )) ||
 ISPICKVAL( Free_Month_Setting__c, &quot;None&quot; ))</errorConditionFormula>
    <errorMessage>Please select a Free Month Setting</errorMessage>
</ValidationRule>