force-app/main/default/objects/OpportunityLineItem/validationRules/OppLine007_Invalid_Free_Months.validationRule-meta.xml
<ValidationRule>
    <fullName>OppLine007_Invalid_Free_Months</fullName>
    <active>true</active>
    <description>A product must always have more months in the Contract Term than Free Months included.</description>
    <errorConditionFormula>(Base_Contract_Term__c  &lt;=  Number_of_Free_Months__c) &amp;&amp; 
ISPICKVAL( Free_Month_Setting__c, 
&quot;Include in Contract Period - At the Beginning&quot;)</errorConditionFormula>
    <errorMessage>The number of Free Months exceeds the number of months in the Contract period.  Please adjust the Number of Free Months or the Free Month Setting.</errorMessage>
</ValidationRule>