force-app/main/default/objects/OpportunityLineItem/validationRules/OppLine008_One_Time_Product_Free_Months.validationRule-meta.xml
<ValidationRule>
    <fullName>OppLine008_One_Time_Product_Free_Months</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Product2.RecurSoft__Billing_Frequency__c , &quot;One-Time&quot; ) &amp;&amp;
Number_of_Free_Months__c &gt; 0</errorConditionFormula>
    <errorMessage>One-Time products cannot have Free Months.</errorMessage>
</ValidationRule>