force-app/main/default/objects/OpportunityLineItem/validationRules/OppLine009_One_Time_Product_Trial_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>OppLine009_One_Time_Product_Trial_Period</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Product2.RecurSoft__Billing_Frequency__c , &quot;One-Time&quot; ) &amp;&amp;
NOT(ISPICKVAL( Trial__c , &quot;&quot; ))</errorConditionFormula>
    <errorMessage>One-Time products cannot have a Trial Period.</errorMessage>
</ValidationRule>