force-app/main/default/objects/OpportunityLineItem/validationRules/RecurSoft__Activation_Date_ReadOnly_on_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__Activation_Date_ReadOnly_on_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    OR (
        $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c,
        $Setup.RecurSoft__Deactivate_opp_validations__c.RecurSoft__IsActive__c
    ), false, 
    AND(
        ISPICKVAL(Opportunity.StageName, &#39;Closed Won&#39;),
        ISCHANGED( RecurSoft__Activation_Date__c)
    )
)</errorConditionFormula>
    <errorMessage>You cannot update Activation Date after the Opportunity Stage is set to Closed Won</errorMessage>
</ValidationRule>