force-app/main/default/objects/OpportunityLineItem/validationRules/RecurSoft__Amount2_shouldnt_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__Amount2_shouldnt_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    OR (
        $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c,
        $Setup.RecurSoft__Deactivate_opp_validations__c.RecurSoft__IsActive__c
    ), false, 
    !ISNEW() &amp;&amp;
    ISPICKVAL(RecurSoft__Billing_Frequency_New__c,  &#39;Milestones&#39;) &amp;&amp;
    RecurSoft__Milestone_2_Amount__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>RecurSoft__Milestone_2_Amount__c</errorDisplayField>
    <errorMessage>Please enter only positive value</errorMessage>
</ValidationRule>